2002-05-27  Marco Pantaleoni  <panta@elasticworld.org>

	* src/lib.[ch]: Added basic.apply (EcLibApply) and and basic.arity
	(EcLibArity). The former takes two arguments: a callable object
	and a sequence of arguments and returns the result of the
	application of the callable to the arguments.
	For example:

	        function add(a, b) { return a + b; }
		local v = basic.arity( add, #[1, 3] );

	will set v to 4.
	The latter will receive a callable object as a number and will
	return an array of two elements: the first is the number of
	minimum required arguments by the callable, the second if a
	boolean indicating if the callable takes a variable number of
	arguments. The API presently doesn't allow to know the number of
	parameters of primitive functions, so basic.arity works only for
	bytecode objects at the moment.

2002-05-24  Marco Pantaleoni  <panta@elasticworld.org>

	* configure.in: when using --enable-memdebug it forces
	EC_DIRTY_MALLOC now.

	* src/compile.c (EcCompilerContextCreate): now ctxt members are
	properly initialized. This fixes a(nother) bug discovered by
	George McBay.

	* src/gc.c (heap_grow): now zeros newly-allocated chunks. This
	fixes a bug discovered by George McBay: the object table release
	routine crashed because it descended erroneously-non-NULL pointers
	(the bug showed up only on windows, and now even on unix with
	EC_DIRTY_MALLOC).

	* src/memory.c (memfill, memfill_dword, ec_malloc): Added
	uninitialized malloc()ed memory detection support (enabled by
	EC_DIRTY_MALLOC).

	* src/conf.h: Added uninitialized malloc()ed memory detection
	macros (EC_DIRTY_MALLOC, EC_DIRTY_PATTERN).

2002-05-21  Marco Pantaleoni  <panta@elasticworld.org>

	* WARNING! on 64 bit platforms (alpha) hash values produced are
	not the same as on 32 bit platforms. Some regression tests fail
	for this reason. Need to investigate.

	* src/object.c src/packageio.c src/types/stack.c: made 64-bit
	clean.

	* src/object.h: made 64-bit clean.
